fix(home): hero section buttons alignment and add one menu link

--- a/src/components/organisms/Kreatywny-montaz-video/hero/hero.module.css
+++ b/src/components/organisms/Kreatywny-montaz-video/hero/hero.module.css
@@ -274,6 +274,7 @@
   .heroBtn .heroPlay {
     width: 30px;
     height: 30px;
+    display: none;
   }
   .heroImg1 {
     margin: -23px 0 0 0px;
