--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -286,6 +286,7 @@
   .heroBtn .heroPlay {
     width: 30px;
     height: 30px;
+    display: none;
   }
   .heroImg1 {
     margin: -23px 0 0 0px;
